--- a/box-model(Assi1)/style.css
+++ b/box-model(Assi1)/style.css
@@ -19,7 +19,7 @@ img
 {
     height: 200px;
     width: 250px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
     margin-bottom:30px;  
 }
 
